syntax = "proto3";

package proto.order.v1;

option go_package = "orderservice/genproto/v1;orderPBV1";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";

// OrderService 订单服务
service OrderService {
  rpc Create(CreateRequest) returns(google.protobuf.Empty){} // 添加订单
  rpc CreateRevert(CreateRequest) returns(google.protobuf.Empty){} // 添加订单失败补偿接口
  rpc Update(UpdateRequest) returns(google.protobuf.Empty){} // 更新订单
  rpc Detail(DetailRequest) returns (Response){} // 获取订单详情
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){} // 删除订单
  rpc List(ListRequest) returns (Response){} // 获取订单列表
  // saga 事务接口
  rpc CreateSaga(CreateRequest) returns(google.protobuf.Empty){} // 添加订单 saga 事务接口
}

// enum 支付方式
enum PaymentType {
  PAYMENT_TYPE_UNDEFINED = 0; // 未定义支付方式
  PAYMENT_TYPE_WECHAT = 1; // 微信支付方式
  PAYMENT_TYPE_ALIPAY = 2; // 支付宝支付方式
}

// enum 支付状态
enum PayStatus {
  PAY_STATUS_UNDEFINED = 0; // 未定义支付状态
  PAY_STATUS_PIED = 1; // 已支付
  PAY_STATUS_NOT_PAY = 2; // 未支付
}

// enum 订单状态
enum OrderStatus {
  ORDER_STATUS_UNDEFINED = 0; // 未定义的订单状态
  ORDER_STATUS_NORMAL = 1; // 正常状态
  ORDER_STATUS_DELETED = 2; // 删除状态
}

//*****************添加订单
message CreateRequest {
  string OrderNo = 1[json_name = "order_no"];
  int64 PaymentType = 3 [json_name = "payment_type", (validate.rules).int64 = {gte:1, lte:2}];
  int64 PayTime = 4 [json_name = "pay_time", (validate.rules).int64 = {gte:1}];
  int64 UserId = 5 [json_name = "user_id", (validate.rules).int64 = {gte:1}];
  int64 ProductId = 6 [json_name = "product_id", (validate.rules).int64 = {gte:1}];
  int64 OrderStatus = 7 [json_name = "order_status", (validate.rules).int64 = {gte:1, lte:2}];
  float Amount = 8 [json_name = "amount"];
}

//*****************更新订单
message UpdateRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
}

//*****************删除订单
message DeleteRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
}

//*****************获取订单详情
message DetailRequest {
  int64 id = 1 [(validate.rules).int64 = {gte:1}];
}

//*****************获取订单列表
message ListRequest {
  int64 page = 1;
  int64 pageSize = 2;
  string name = 3;
}

message ListResponse {
  int64 total = 1;
  repeated OrderDetail list = 2;
}

//*****************共用 message

// 分页参数
message Page {
  int64 page = 1;
  int64 pageSize = 2;
}

// 订单详情
message OrderDetail{
  int64  id = 1;
  string OrderNo = 2 [json_name = "order_no"];
  float PaymentType = 3;
  int64 PayType = 4;
  int64 UserId = 5;
  int64 ProductId = 6;
  int64 OrderStatus = 7;
  float Amount = 8;
  int64 CreateTime = 9;
  int64 UpdateTime = 10;
}

// 用户详情
message UserDetail{
  int64 UserId = 1;
}

// grpc 返回数据。自动解析到对应的 http 返回数据
message Response {
  int64 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}